--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -8290,6 +8290,47 @@ header.header .top-links li .child-box ul li a.highlight {
   text-align: center;
   width: 100%;
 }
+.review-modal .modal-body .title {
+  font-family: Roboto;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+}
+.review-modal .modal-body .star-wrapper .star {
+  position: absolute;
+  width: 20px;
+  height: 19px;
+  cursor: pointer;
+  background: url('../images/star.png') no-repeat;
+}
+.review-modal .modal-body .star-wrapper .star2 {
+  margin-left: 25px;
+}
+.review-modal .modal-body .star-wrapper .star3 {
+  margin-left: 50px;
+}
+.review-modal .modal-body .star-wrapper .star4 {
+  margin-left: 75px;
+}
+.review-modal .modal-body .star-wrapper .star5 {
+  margin-left: 100px;
+}
+.review-modal .modal-body textarea {
+  border-radius: 0;
+}
+.review-modal .modal-footer .btn-send {
+  background-color: #02b691;
+  width: 70px;
+  height: 32px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 0;
+}
+.review-modal .modal-footer .btn-cacel {
+  border-radius: 0;
+}
 /* ---------------------------------------
     HERO
 ----------------------------------------- */
@@ -10300,17 +10341,46 @@ header.header .top-links li .child-box ul li a.highlight {
   padding-left: 30px;
   color: #a6cd78;
 }
+.main .wrap-tracking .tracking-content .general-info .wrapper.completed .icon {
+  position: absolute;
+  margin-top: 5px;
+  width: 15px;
+  height: 11px;
+  background: url('../images/completed-icon.png');
+}
+.main .wrap-tracking .tracking-content .general-info .wrapper.completed .status {
+  padding-left: 20px;
+  color: #a6cd78;
+}
 .main .wrap-tracking .tracking-content .orders-flow {
   min-height: 250px;
   background-color: #eee;
   border-top: 1px solid #dcdcdc;
   border-bottom: 1px solid #dcdcdc;
 }
+.main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-2 {
+  min-height: 320px;
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-2 {
+    min-height: 400px !important;
+  }
+}
 .main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-3 {
   min-height: 320px;
 }
-.main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-2 {
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-3 {
+    min-height: 400px !important;
+  }
+}
+.main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-4 {
   min-height: 320px;
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow.orders-flow-tracking-4 {
+    min-height: 400px !important;
+  }
 }
 .main .wrap-tracking .tracking-content .orders-flow .top {
   height: 160px;
@@ -10489,40 +10559,80 @@ header.header .top-links li .child-box ul li a.highlight {
   position: absolute;
   padding-top: 10px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info {
   float: right;
   padding-left: 50px;
   padding-top: 5px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .name {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .name {
   padding-left: 20px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .phone {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .phone {
   padding-left: 20px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .location {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .location {
   padding-left: 20px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .profile-icon {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .profile-icon {
   position: absolute;
   margin-top: 4px;
   width: 12px;
   height: 12px;
   background: url('../images/profile.png');
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .phone-icon {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .phone-icon {
   position: absolute;
   margin-top: 2px;
   width: 9px;
   height: 15px;
   background: url('../images/phone.png');
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-infor .location-icon {
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-3 .shiper-info .location-icon {
   position: absolute;
   margin-top: 4px;
   width: 11px;
   height: 14px;
   background: url('../images/location.png');
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-4 {
+  position: relative;
+  float: right;
+  width: 300px;
+  min-height: 100px;
+  padding-right: 5px;
+}
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-4 {
+    min-height: 120px;
+    width: 250px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-4:before {
+    margin-top: 120px !important;
+  }
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-4:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-top: 100px;
+  margin-left: 65%;
+  background: url('../images/icon1.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-4 .coffe-cup {
+  position: absolute;
+  padding-top: 15px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-4 .ship-info {
+  float: right;
+  padding-left: 60px;
+  padding-top: 5px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-4 .ship-info a {
+  color: #000000;
+  font-size: 13px;
+  font-weight: 700;
+  text-decoration: underline;
 }
 .main .wrap-tracking .tracking-content .orders-flow .mid {
   padding-bottom: 20px;
@@ -10576,6 +10686,9 @@ header.header .top-links li .child-box ul li a.highlight {
 }
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-3 .node {
   margin-left: 36%;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .progress-bar-4 {
+  width: 99%;
 }
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .one,
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two,
@@ -10631,6 +10744,9 @@ header.header .top-links li .child-box ul li a.highlight {
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .circle.active .icon {
   background: url('../images/step2-active.png') no-repeat !important;
 }
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .two .title {
+  margin-left: -15px;
+}
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three {
   left: 95%;
 }
@@ -10644,17 +10760,62 @@ header.header .top-links li .child-box ul li a.highlight {
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress .three .circle.active .icon {
   background: url('../images/step3-active.png') no-repeat !important;
 }
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-1 .title {
+    width: 100px;
+    margin-left: -10px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-1 .three .title {
+    min-width: 100px !important;
+    margin-left: -60px !important;
+  }
+}
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-1 .three .titile-step-3 {
   margin-left: -160px;
   text-align: right;
   min-width: 200px;
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-2 .title {
+    width: 100px;
+    margin-left: -10px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-2 .three .title {
+    min-width: 100px !important;
+    margin-left: -60px !important;
+  }
 }
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-2 .three .titile-step-3 {
   margin-left: -160px;
   text-align: right;
   min-width: 200px;
 }
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-3 .title {
+    width: 100px;
+    margin-left: -10px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-3 .three .title {
+    min-width: 100px !important;
+    margin-left: -60px !important;
+  }
+}
 .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-3 .three .titile-step-3 {
+  margin-left: -160px;
+  text-align: right;
+  min-width: 200px;
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-4 .title {
+    width: 100px;
+    margin-left: -10px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-4 .three .title {
+    min-width: 100px !important;
+    margin-left: -60px !important;
+  }
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .progress-wrapper .progress.progress-tracking-4 .three .titile-step-3 {
   margin-left: -160px;
   text-align: right;
   min-width: 200px;
@@ -10667,6 +10828,11 @@ header.header .top-links li .child-box ul li a.highlight {
   font-weight: 300;
   line-height: 25px;
   text-align: center;
+}
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .bottom {
+    padding-top: 40px !important;
+  }
 }
 .main .wrap-tracking .tracking-content .orders-detail .table-responsive {
   border: none;
