--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -1087,6 +1087,86 @@ header.header {
     }
 }
 
+.review-completed-modal {
+    .modal-body {
+        .like-icon {
+            text-align: center;
+        }
+        .text {
+            color:  #000000;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 25px;
+            text-align: center;
+            span {
+                display: block;
+            }
+        }
+    }
+    .modal-footer {
+        border: none !important;
+        height: 80px;
+        ul {
+            position: absolute;
+            margin-left: 28%;
+            text-align: center;
+            li {
+                display: inline;
+            }
+            .facebook {
+                position: absolute;
+                background-color:  #4b76bd;
+                width: 40px;
+                height: 40px;
+                cursor: pointer;
+                i {
+                    position: absolute;
+                    display: block;
+                    width: 15px;
+                    height: 26px;
+                    margin-top: 7px;
+                    margin-left: 12px;
+                    background: url('../images/facebook.png') no-repeat;
+                }
+            }
+            .google {
+                position: absolute;
+                background-color:  #fc5345;
+                width: 40px;
+                height: 40px;
+                margin-left: 50px;
+                cursor: pointer;
+                i {
+                    position: absolute;
+                    display: block;
+                    width: 31px;
+                    height: 20px;
+                    margin-top: 10px;
+                    margin-left: 6px;
+                    background: url('../images/google.png') no-repeat;
+                }
+            }
+            .twitter {
+                position: absolute;
+                background-color:  #00c6ff;
+                width: 40px;
+                height: 40px;
+                margin-left: 100px;
+                cursor: pointer;
+                i {
+                    position: absolute;
+                    display: block;
+                    width: 25px;
+                    height: 20px;
+                    margin-top: 10px;
+                    margin-left: 8px;
+                    background: url('../images/twitter.png') no-repeat;
+                }
+            }
+        }
+    }
+}
+
 /* ---------------------------------------
     HERO
 ----------------------------------------- */
