--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -8306,6 +8306,11 @@ header.header .top-links li .child-box ul li a.highlight {
   text-align: left;
   vertical-align: middle;
 }
+@media (max-width: 858px) {
+  .review-modal .modal-dialog {
+    min-width: 310px;
+  }
+}
 .review-modal .modal-body .title {
   font-family: Roboto;
   color: #333333;
@@ -8318,7 +8323,12 @@ header.header .top-links li .child-box ul li a.highlight {
   width: 20px;
   height: 19px;
   cursor: pointer;
-  background: url('../images/star.png') no-repeat;
+}
+.review-modal .modal-body .star-wrapper .star-gray {
+  background: url('../images/gray-star.png') no-repeat;
+}
+.review-modal .modal-body .star-wrapper .star-yellow {
+  background: url('../images/big-yellow-star.png') no-repeat;
 }
 .review-modal .modal-body .star-wrapper .star2 {
   margin-left: 25px;
@@ -8347,6 +8357,88 @@ header.header .top-links li .child-box ul li a.highlight {
 .review-modal .modal-footer .btn-cacel {
   border-radius: 0;
 }
+.review-order-modal {
+  text-align: center;
+  padding: 0 !important;
+}
+.review-order-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.review-order-modal .modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+@media (max-width: 858px) {
+  .review-order-modal .modal-dialog {
+    min-width: 310px;
+  }
+}
+.review-order-modal .modal-header {
+  background-color: #ffffff;
+}
+.review-order-modal .modal-header .modal-title {
+  text-transform: none;
+  color: #000000;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+.review-order-modal .modal-body {
+  padding-top: 0;
+}
+.review-order-modal .modal-body .title {
+  font-family: Roboto;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+}
+.review-order-modal .modal-body .star-wrapper .star {
+  position: absolute;
+  width: 20px;
+  height: 19px;
+  cursor: pointer;
+  background: url('../images/star.png') no-repeat;
+}
+.review-order-modal .modal-body .star-wrapper .star-gray {
+  background: url('../images/gray-star.png') no-repeat;
+}
+.review-order-modal .modal-body .star-wrapper .star-yellow {
+  background: url('../images/big-yellow-star.png') no-repeat;
+}
+.review-order-modal .modal-body .star-wrapper .star2 {
+  margin-left: 25px;
+}
+.review-order-modal .modal-body .star-wrapper .star3 {
+  margin-left: 50px;
+}
+.review-order-modal .modal-body .star-wrapper .star4 {
+  margin-left: 75px;
+}
+.review-order-modal .modal-body .star-wrapper .star5 {
+  margin-left: 100px;
+}
+.review-order-modal .modal-body textarea {
+  border-radius: 0;
+}
+.review-order-modal .modal-footer .btn-send {
+  background-color: #02b691;
+  width: 70px;
+  height: 32px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 0;
+}
+.review-order-modal .modal-footer .btn-cacel {
+  border-radius: 0;
+}
 .review-completed-modal {
   text-align: center;
   padding: 0 !important;
@@ -8362,6 +8454,11 @@ header.header .top-links li .child-box ul li a.highlight {
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+}
+@media (max-width: 858px) {
+  .review-completed-modal .modal-dialog {
+    min-width: 310px;
+  }
 }
 .review-completed-modal .modal-body .like-icon {
   text-align: center;
@@ -8437,6 +8534,74 @@ header.header .top-links li .child-box ul li a.highlight {
   margin-top: 10px;
   margin-left: 8px;
   background: url('../images/twitter.png') no-repeat;
+}
+.send-order-email-modal,
+.edit-order-name-modal {
+  text-align: center;
+  padding: 0 !important;
+}
+.send-order-email-modal:before,
+.edit-order-name-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.send-order-email-modal .modal-dialog,
+.edit-order-name-modal .modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+@media (max-width: 858px) {
+  .send-order-email-modal .modal-dialog,
+  .edit-order-name-modal .modal-dialog {
+    min-width: 310px;
+  }
+}
+.send-order-email-modal .modal-header,
+.edit-order-name-modal .modal-header {
+  background-color: #ffffff;
+}
+.send-order-email-modal .modal-header .modal-title,
+.edit-order-name-modal .modal-header .modal-title {
+  text-transform: none;
+  color: #000000;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+.send-order-email-modal .modal-body,
+.edit-order-name-modal .modal-body {
+  padding-top: 0;
+}
+.send-order-email-modal .modal-body .title,
+.edit-order-name-modal .modal-body .title {
+  font-family: Roboto;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+}
+.send-order-email-modal .modal-body input,
+.edit-order-name-modal .modal-body input {
+  border-radius: 0;
+}
+.send-order-email-modal .modal-footer .btn-send,
+.edit-order-name-modal .modal-footer .btn-send {
+  background-color: #02b691;
+  width: 70px;
+  height: 32px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 0;
+}
+.send-order-email-modal .modal-footer .btn-cacel,
+.edit-order-name-modal .modal-footer .btn-cacel {
+  border-radius: 0;
 }
 /* ---------------------------------------
     HERO
@@ -9572,6 +9737,9 @@ header.header .top-links li .child-box ul li a.highlight {
     ----------------------------------------- */
   /* ---------------------------------------
         ORDERS HISTORY PAGE
+    ----------------------------------------- */
+  /* ---------------------------------------
+        SCHEDULE PAGE
     ----------------------------------------- */
 }
 .main .wrap-profile .cat-menu {
@@ -11239,6 +11407,127 @@ header.header .top-links li .child-box ul li a.highlight {
   padding-right: 20px;
   margin-left: 12px;
   background: url('../images/download.png') no-repeat;
+}
+.main .wrap-schedule .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.main .wrap-schedule .cat-menu {
+  padding: 40px 0;
+}
+.main .wrap-schedule .cat-menu ul {
+  margin-bottom: 0;
+}
+.main .wrap-schedule .cat-menu ul li {
+  list-style: none;
+  margin-bottom: 3px;
+}
+.main .wrap-schedule .cat-menu ul li:hover a,
+.main .wrap-schedule .cat-menu ul li.active a {
+  font-weight: 700;
+  border-left: 3px solid #02b691;
+}
+.main .wrap-schedule .cat-menu ul li a {
+  font-size: 18px;
+  color: #000;
+  display: inline-block;
+  padding: 7px 14px;
+  transition-duration: 0.1s;
+}
+.main .wrap-schedule .schedule-content {
+  border-left: 1px solid #eee;
+  padding: 20px 0 50px 20px;
+}
+@media (max-width: 860px) {
+  .main .wrap-schedule .schedule-content {
+    padding-left: 0;
+    padding-top: 0;
+    border-left: none;
+  }
+}
+.main .wrap-schedule .schedule-content .header .title {
+  color: #000000;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+}
+.main .wrap-schedule .schedule-content .header .search-order {
+  border-radius: 0;
+  color: #999999;
+  font-size: 13px;
+  font-style: italic;
+  text-align: left;
+}
+.main .wrap-schedule .schedule-content .table-responsive {
+  margin: 10px 10px;
+}
+@media (max-width: 1199px) {
+  .main .wrap-schedule .schedule-content .table-responsive {
+    width: auto;
+  }
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table {
+  font-size: 13px;
+  border: 1px solid #e0e0e0;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table thead tr th {
+  background-color: #666;
+  color: #fff;
+  padding: 10px;
+  border-bottom: none;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr:nth-child(2n) td {
+  background-color: #eee;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td {
+  border-top: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 10px;
+  color: #333333;
+  font-size: 13px;
+  font-weight: 400;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td:nth-child(1) {
+  text-align: center;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td:nth-child(3) {
+  text-align: center;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td:nth-child(6) {
+  text-align: center;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td a {
+  color: #02b691;
+  text-decoration: underline;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody tr td span {
+  display: block;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody .btn-control {
+  padding-top: 15px;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody .btn-control .btn-action {
+  width: 20px;
+  height: 20px;
+  padding-top: 5px;
+  padding-right: 20px;
+  margin-left: 20px;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody .btn-control .edit {
+  width: 20px;
+  height: 20px;
+  padding-top: 5px;
+  padding-right: 20px;
+  margin-left: 20px;
+  background: url('../images/edit.png') no-repeat;
+}
+.main .wrap-schedule .schedule-content .table-responsive .schedule-table tbody .btn-control .remove {
+  width: 20px;
+  height: 20px;
+  padding-top: 5px;
+  padding-right: 20px;
+  margin-left: 20px;
+  background: url('../images/remove.png') no-repeat;
 }
 /* ---------------------------------------
     FOOTER
